@@ -135,7 +135,7 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>27.0.0</version>
+			<version>28.2.0</version>
 		</dependency>
 		
 		<dependency>
