@@ -1,3 +1,5 @@
+- Refactor: Upgraded dependency of fenixedu-academic-core
+
 2.8.6 (04-03-2020)
 - Fix: Changed A3ES help message to indicate that user should explicitly choose which data to send
 - Fix: Fixed bug on A3ESInstance initialization 
